--- a/sati_django/src/templates/javascript.html
+++ b/sati_django/src/templates/javascript.html
@@ -22,6 +22,7 @@
 <!-- CRUD -->
 <script src="{% static "/js/factory/crud_factory.js" %}"></script>
 <script src="{% static "/js/factory/crud_urls_factory.js" %}"></script>
+<script src="{% static "/js/getmdl-select.js" %}"></script>
 
 <!-- Public -->
 
