--- a/sati_django/apps/dashboard/templates/dashboard/base.html
+++ b/sati_django/apps/dashboard/templates/dashboard/base.html
@@ -67,14 +67,14 @@
                     </div>
                     -->
 
-                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">
-                        <i class="material-icons">more_vert</i>
-                    </button>
-                    <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn">
-                        <li class="mdl-menu__item">About</li>
-                        <li class="mdl-menu__item">Contact</li>
-                        <li class="mdl-menu__item">Legal information</li>
-                    </ul>
+{#                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">#}
+{#                        <i class="material-icons">more_vert</i>#}
+{#                    </button>#}
+{#                    <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn">#}
+{#                        <li class="mdl-menu__item">About</li>#}
+{#                        <li class="mdl-menu__item">Contact</li>#}
+{#                        <li class="mdl-menu__item">Legal information</li>#}
+{#                    </ul>#}
 
                 </div>
 
@@ -126,7 +126,7 @@
                     {% if request.user.is_staff %}
                     <a class="mdl-navigation__link" href="/dashboard/edition"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">bookmark</i>Edição</a>
                     {% endif %}
-                    <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">event</i>Evento</a>
+                    <a class="mdl-navigation__link" href="/dashboard/event"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">event</i>Evento</a>
                     <a class="mdl-navigation__link" href="/dashboard/logout"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">exit_to_app</i>Logout</a>
                     <div class="mdl-layout-spacer"></div>
                     <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
