--- a/sati_django/apps/public/templates/public/css.html
+++ b/sati_django/apps/public/templates/public/css.html
@@ -18,14 +18,13 @@
 
     .headline-image {
         width: auto;
-        height: 250px;
         background-size: cover;
-        position: relative;
-        overflow: hidden;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
     }
 
     .headline-image-event {
-        background: url('{% static '/images/event/event-headline-2.jpg' %}') center center no-repeat;
+        background: url('{% static '/images/event/event-headline-2.jpg' %}') center;
     }
 
 
