--- a/sati_django/apps/public/static/css/public/style.css
+++ b/sati_django/apps/public/static/css/public/style.css
@@ -1,3 +1,77 @@
+.divider {								/* minor cosmetics */
+    display: table;
+    font-size: 24px;
+    text-align: center;
+    width: 100%; 						/* divider width */
+    margin: 20px -10px;					/* spacing above/below */
+}
+.divider span { display: table-cell; position: relative; }
+.divider span:first-child, .divider span:last-child {
+    width: 50%;
+    top: 13px;							/* adjust vertical align */
+    -moz-background-size: 100% 2px; 	/* line width */
+    background-size: 100% 2px; 			/* line width */
+    background-position: 0 0, 0 100%;
+    background-repeat: no-repeat;
+}
+.divider span:first-child {				/* color changes in here */
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(transparent), to(#7c7c7c));
+    background-image: -webkit-linear-gradient(180deg, transparent, #7c7c7c);
+    background-image: -moz-linear-gradient(180deg, transparent, #7c7c7c);
+    background-image: -o-linear-gradient(180deg, transparent, #7c7c7c);
+    background-image: linear-gradient(90deg, transparent, #7c7c7c);
+}
+.divider span:nth-child(2) {
+    color: #7c7c7c; padding: 0px 5px; width: auto; white-space: nowrap;
+}
+.divider span:last-child {				/* color changes in here */
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#7c7c7c), to(transparent));
+    background-image: -webkit-linear-gradient(180deg, #7c7c7c, transparent);
+    background-image: -moz-linear-gradient(180deg, #7c7c7c, transparent);
+    background-image: -o-linear-gradient(180deg, #7c7c7c, transparent);
+    background-image: linear-gradient(90deg, #7c7c7c, transparent);
+}
+
+.headline-event-detail {
+  height: 450px;
+}
+
+
+.boxed-fields{
+  margin-bottom:12px;
+  border: 1px;
+  border-style: dashed;
+  padding:25px 20px;
+  position:relative;
+  margin-bottom:20px;
+}
+
+.boxed-fields-title {
+      font-size:18px;
+      font-weight:400;
+      line-height:1;
+      text-transform: uppercase;
+      display: inline-block;
+      position:absolute;
+      left: 10px;
+      top: -30px;
+      padding:0 10px;
+      color: dodgerblue;
+      background-color: #ffffff;
+}
+
+.event-detail__description {
+  margin-top: -72px;
+}
+
+
+.headline-overflow {
+    background: rgba(0, 0, 0, 0.45);
+    overflow: hidden;
+    height: 100%;
+    z-index: 2;
+}
+
 .filter-content {
   margin-top: -8px;
   padding-bottom: 0px;
@@ -79,6 +153,9 @@
 
 /* - Headline - */
 
+
+
+
 .headline {
     height: 250px;
 }
@@ -98,6 +175,11 @@
     vertical-align: middle;
     padding-top: 0px;
     line-height: 250px;
+}
+
+.headline-subtitle {
+  margin-top: -95px;
+
 }
 
 
