--- a/sati_django/src/static/css-main/style-base.css
+++ b/sati_django/src/static/css-main/style-base.css
@@ -38,7 +38,7 @@
 
 
 .max-w-1024 {
-    max-width: 1080px;
+    max-width: 1024px;
 }
 
 .max-w-1280 {
@@ -47,4 +47,12 @@
 
 .max-w-720 {
     max-width: 720px;
+}
+
+.h-300 {
+    height: 300px;
+}
+
+.h-100 {
+    height: 100px;
 }
