--- a/sati_django/src/static/templates/sati/message.html
+++ b/sati_django/src/static/templates/sati/message.html
@@ -1,7 +1,7 @@
 <div class="mdl-layout-spacer"></div>
-<md-toolbar class="mdl-color--red-A700 mdl-cell mdl-cell--8-col mdl-shadow--3dp" >
+<md-toolbar class="mdl-cell mdl-cell--8-col mdl-shadow--3dp {[{ style }]}">
     <div class="mdl-cell mdl-cell--12-col mdl-typography--text-center">
-        <h2 class="mdl-typography--headline" ng-bind="warnMessage"> </h2>
+        <h2 class="mdl-typography--headline" ng-bind="message"> </h2>
     </div>
 </md-toolbar>
 <div class="mdl-layout-spacer"></div>
