--- a/sati_django/apps/public/templates/public/js.html
+++ b/sati_django/apps/public/templates/public/js.html
@@ -8,3 +8,4 @@
 <script src="{% static "/js/public/event/event_controller.js" %}"></script>
 <script src="{% static "/js/public/event/event_directive.js" %}"></script>
 <script src="{% static "/js/public/event/event_factory.js" %}"></script>
+<script src="{% static "/js/public/event/event_filter.js" %}"></script>
