--- a/sati_django/apps/public/static/css/public/style.css
+++ b/sati_django/apps/public/static/css/public/style.css
@@ -32,6 +32,12 @@
     background-image: linear-gradient(90deg, #7c7c7c, transparent);
 }
 
+/*-- session-detail --*/
+
+.session-detail {
+    margin-top: -20px;
+}
+
 .headline-event-detail {
   height: 450px;
 }
