--- a/sati_django/src/templates/css.html
+++ b/sati_django/src/templates/css.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 <link rel="stylesheet" href="{% static "/css-main/style-base.css" %}"/>
+<link rel="stylesheet" href="{% static "/css-main/ribbon.css" %}"/>
 
 <!-- Google Fonts -->
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
