--- a/sati_django/apps/public/templates/public/js.html
+++ b/sati_django/apps/public/templates/public/js.html
@@ -15,3 +15,7 @@
 <script src="{% static "/js/public/signup/signup_controller.js" %}"></script>
 <script src="{% static "/js/public/signup/signup_factory.js" %}"></script>
 <script src="{% static "/js/public/signup/signup_directive.js" %}"></script>
+
+
+
+<script src="{% static "/js/public/public_directive.js" %}"></script>
