--- a/sati_django/apps/public/templates/public/signup.html
+++ b/sati_django/apps/public/templates/public/signup.html
@@ -180,10 +180,15 @@
                             </div>
                     </div>
 
-                    <md-button class="md-raised md-warn mdl-cell mdl-cell--3-col mdl-cell--2-col-phone">Limpar</md-button>
-                    <div class="mdl-layout-spacer"></div>
-                    <md-button ng-click="signupCtrl.create()"
+                    <md-button
+                            ng-click="clear()"
+                            ng-bind="CRUDLabel.label_clear()"
+                            class="md-raised md-warn mdl-cell mdl-cell--3-col mdl-cell--2-col-phone">
+                    </md-button>
 
+                    <div class="mdl-layout-spacer"></div>
+                    <md-button ng-click="create()"
+                               ng-disabled="!signup_form.$valid"
                                aria-label="Add"
                                class="md-raised md-primary mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--2-col-phone"
                                ng-bind="CRUDLabel.label_add_item()">
@@ -192,7 +197,7 @@
                 </form>
 
 
-                <!--div class="mdl-layout-spacer"> ng-disabled="!signup_form.$valid" </div-->
+                <!--div class="mdl-layout-spacer">  </div-->
 
             </md-content>
         </div>
