--- a/sati_django/src/static/templates/public/event/occurrence_card.html
+++ b/sati_django/src/static/templates/public/event/occurrence_card.html
@@ -7,14 +7,14 @@
         <span
                 class="vert-align"
                 ng-bind=" (occurrence.begin_date_time | date : 'EEEE, dd/MM/yyyy') +
-                eventDetail.Label.at() + (occurrence.begin_date_time | date : 'H:mm')">
+                Label.at() + (occurrence.begin_date_time | date : 'H:mm')">
         </span>
 
         <span
                 class="vert-align"
-                ng-bind=" eventDetail.Label.until() +
+                ng-bind=" Label.until() +
                 ( occurrence.end_date_time | date : 'EEEE, dd/MM/yyyy') +
-                eventDetail.Label.at() +
+                Label.at() +
                 (occurrence.end_date_time | date : 'H:mm')">
         </span>
     </div>
@@ -48,7 +48,7 @@
         <span
                 class="vert-align"
                 ng-bind="(occurrence.begin_date_time | date : 'H:mm') +
-                eventDetail.Label.until() +
+                Label.until() +
                 (occurrence.end_date_time | date : 'H:mm') ">
         </span>
 
@@ -66,7 +66,7 @@
          <i class="material-icons vert-align" role="presentation">place</i>
         <span
                 class="vert-align"
-                ng-bind="occurrence.room.name">
+                ng-bind="occurrence.room_name">
         </span>
     </div>
 
