--- a/sati_django/src/static/templates/public/event/session_card.html
+++ b/sati_django/src/static/templates/public/event/session_card.html
@@ -1,13 +1,13 @@
 
     <span class="ribbon top-right ribbon-danger ribbon-session" ng-show="!session.has_spots && session.occurrences.length">
-        <small ng-bind="eventDetail.EventLabel.no_spot()"></small>
+        <small ng-bind="Label.no_spot()"></small>
     </span>
     <div class="mdl-grid mdl-cell mdl-cell--12-col mdl-card__title mdl-card__title__event mdl-color-text--blue-grey-600 mdl-typography--headline">
 
         <div  class="mdl-cell--8-col-tablet mdl-cell--4-col-phone">
             <i class="material-icons vert-align" role="presentation">assignment_ind</i>
             &nbsp;
-            <span class="vert-align" ng-bind="session.instructor.name"></span>
+            <span class="vert-align" ng-bind="session.instructor_name"></span>
         </div>
 
 
@@ -16,7 +16,7 @@
         <div class="mdl-cell--8-col-tablet mdl-cell--4-col-phone">
             <i class="material-icons vert-align" role="presentation">event_seat</i>
             &nbsp;
-            <span class="vert-align" ng-bind="session.spots_available"></span>
+            <span class="vert-align" ng-bind="session.available_spots"></span>
         </div>
     </div>
     <occurrence-detail
@@ -27,5 +27,5 @@
     <noresult-message
                     class="mdl-grid mdl-card__actions mdl-card--border mdl-grid mdl-cell mdl-cell--12-col"
                     ng-hide="session.occurrences.length"
-                    ng-init="message = eventDetail.EventLabel.no_results_occurrence()">
+                    ng-init="message = EventLabel">
     </noresult-message>
