--- a/sati_django/src/templates/javascript.html
+++ b/sati_django/src/templates/javascript.html
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="{% static "node_modules/angular-messages/angular-messages.js" %}"></script>
 <script type="text/javascript" src="{% static "node_modules/angular-route/angular-route.js" %}"></script>
 <script type="text/javascript" src="{% static "node_modules/angular-sanitize/angular-sanitize.js" %}"></script>
+<script type="text/javascript" src="{% static "node_modules/angular-resource/angular-resource.js" %}"></script>
 
 <script type="text/javascript" src="{% static "node_modules/angular-input-masks/releases/angular-input-masks-standalone.min.js" %}"></script>
 
